Fixed tags wrap

--- a/src/components/Experience/components/ExperienceItem/index.module.css
+++ b/src/components/Experience/components/ExperienceItem/index.module.css
@@ -102,6 +102,7 @@
     padding: 5px 10px;
     position: relative;
     font-size: 12px;
+    text-wrap: nowrap;
 }
 
 .tag::before {
